src/settings-renderer/components/menu-properties/WorkflowEditor.module.scss
//////////////////////////////////////////////////////////////////////////////////////////
//   _  _ ____ _  _ ___  ____                                                           //
//   |_/  |__| |\ | |  \ |  |    This file belongs to Kando, the cross-platform         //
//   | \_ |  | | \| |__/ |__|    pie menu. Read more on github.com/kando-menu/kando     //
//                                                                                      //
//////////////////////////////////////////////////////////////////////////////////////////

// SPDX-FileCopyrightText: Simon Schneegans <code@simonschneegans.de>
// SPDX-License-Identifier: MIT

.workflowEditor {
  min-height: 0px; // This is important to make the scrollboxes work.
  padding-top: 24px;
  display: flex;
  position: relative;
  gap: 8px;
  flex-direction: column;
  justify-content: center;
  overflow: hidden;
}

.workflowSelector {
  display: flex;
  justify-content: center;
}

.workflowSlider {
  min-height: 0px; // This is important to make the scrollboxes work.
  display: flex;
  transition: transform 0.3s ease-in-out;
}

.workflow {
  min-height: 0px; // This is important to make the scrollboxes work.
  min-width: 100%;
  margin-top: 16px;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

